--- a/manawarat_app/netlify.toml
+++ b/manawarat_app/netlify.toml
@@ -4,6 +4,11 @@
   functions = "dist"
 
 [[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/index"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
